[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/backgrounds/list_bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Panels/PartyMenu/PartyMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PartyMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 25
custom_constants/margin_left = 20
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 25.0
margin_right = 380.0
margin_bottom = 775.0
custom_constants/separation = 20

[node name="MonsterContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 360.0
custom_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 702.0
margin_right = 360.0
margin_bottom = 750.0
size_flags_vertical = 10
text = "BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
